--- a/application/backend/build.gradle
+++ b/application/backend/build.gradle
@@ -1,6 +1,11 @@
 dependencies {
-	implementation 'com.h2database:h2:1.4.197'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.1.2.RELEASE'
+	compile project(':application:domain')
+
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.1.2.RELEASE'
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.2.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.1.2.RELEASE'
+	
+	implementation 'com.h2database:h2:1.4.197'
+
 	testImplementation 'junit:junit:4.+'
 }
