úprava test scope konfigurácie a rozbiehanie konfigurácie integračných testov

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -4,4 +4,8 @@ subprojects {
 	repositories {
 		jcenter()
 	}
+
+	dependencies {
+		testCompile 'org.springframework.boot:spring-boot-starter-test:2.1.2.RELEASE'
+	}
 }
