--- a/application/backend/src/test/resources/jpa.properties
+++ b/application/backend/src/test/resources/jpa.properties
@@ -1,6 +1,6 @@
 jpa.configuration.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-spring.datasource.conf.url=jdbc:h2:mem:testdb
+spring.datasource.conf.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.conf.username=sa
 spring.datasource.conf.password=
 spring.datasource.conf.driverClassName=org.h2.Driver
