vytvorenie test modulu a oddelenie test konfigurácie tam (h2-mem profil, import sql scriptov do integračné testy, ...)

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'work-notes'
 
 include 'application:domain'
+include 'application:impl'
 include 'application:backend'
-include 'application:frontend'
+include 'application:test'
