--- a/application/backend/src/test/resources/application.properties
+++ b/application/backend/src/test/resources/application.properties
@@ -1,3 +1,3 @@
 #Port on with will be Spring boot application run
 server.port=8015
-spring.application.name=work-notes
+spring.application.name=work-notes-localhost
