--- a/application/test/build.gradle
+++ b/application/test/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
 	compile project (':application:impl')
 
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.2.RELEASE'
+	compile 'org.springframework.boot:spring-boot-starter-test:2.1.2.RELEASE'
+	compile 'org.testng:testng:6.14.3'
 	implementation 'junit:junit:4.+'
 }
