vyriešenie problému s encodingom v zdrojákoch + pridanie sequencera na entitu (a h2 init scriptu) + premenovanie entity Note na Task + prehodenie testu na AbstractTestNGSpringConctextTests (pre použitie testNG anotacii @BeforeMethod a @BeforeClass) + menšie úpravy v závislostiach medzi modulmi

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -1,5 +1,13 @@
 subprojects {
 	apply plugin: 'java'
+
+	compileJava {
+		options.encoding = sourceEncoding
+	}
+
+	compileTestJava {
+		options.encoding = sourceEncoding
+	}
 	
 	repositories {
 		jcenter()
