--- a/application/impl/build.gradle
+++ b/application/impl/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
+	compile project(':application:domain')
+
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.1.2.RELEASE'
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.2.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.1.2.RELEASE'
