--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'work-notes'
 
+include 'ui'
+
 include 'application:domain'
 include 'application:impl'
 include 'application:backend'
