prekopanie inicializácie enumov z backend-u (TaskPriority, TaskState) v Angulary (okodene to, aby sa tieto doťahovali z backend-u pokiaľ možno iba raz za refresh stránky... hnusné komplikácie s inicializáciou (asynchrónne requesty na backend + asynchrónna inicializácia komponentov)) + nástrel update taskov v DB po ich zmene na GUI (problém s deserializovaním LocaleDateTime)

--- a/application/backend/src/test/resources/application.properties
+++ b/application/backend/src/test/resources/application.properties
@@ -1,3 +1,4 @@
 #Port on with will be Spring boot application run
 server.port=8015
 spring.application.name=work-notes-localhost
+spring.jackson.serialization.write-date-keys-as-timestamps=true
