--- a/application/domain/build.gradle
+++ b/application/domain/build.gradle
@@ -12,6 +12,7 @@ dependencies {
 	compile 'org.hibernate:hibernate-core:5.4.1.Final'
 	compile 'com.querydsl:querydsl-jpa:4.2.1'
 	compile 'javax.annotation:javax.annotation-api:1.3.2'
+	implementation 'org.springframework.boot:spring-boot-starter-json:2.1.2.RELEASE'
 	querydslApt 'com.querydsl:querydsl-apt:4.2.1'
 }
 
