--- a/application/backend/src/main/resources/application.properties
+++ b/application/backend/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-#Port on with will be Spring boot application run
+#Port on with will be Spring boot application run - if deployed on Azure, App settings (in Azure Web App)
+# must be setup on same port e.g. WEBSITES_PORT = 8010, Port = 8010
 server.port=8010
 spring.application.name=work-notes
+
+security.jwt.token.secret-key=wN4every1
+security.jwt.token.validity-in-millis=360000
