--- a/application/backend/src/main/resources/jpa.properties
+++ b/application/backend/src/main/resources/jpa.properties
@@ -1,6 +1,9 @@
-jpa.configuration.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#Azure SQL database configuration
+jpa.configuration.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
-spring.datasource.conf.url=jdbc:h2:~/Sync_folder/Sync/H2_databases/work_notes_h2
-spring.datasource.conf.username=sa
-spring.datasource.conf.password=
-spring.datasource.conf.driverClassName=org.h2.Driver
+spring.datasource.conf.url=jdbc:sqlserver://grondal-db.database.windows.net:1433;database=WorkNotes;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.conf.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+#nutne mať nastavené ako environment variables (na Azure v App settings)
+spring.datasource.conf.username=${WN_DEV_SPRING_DATASOURCE_USER_NAME}
+spring.datasource.conf.password=${WN_DEV_SPRING_DATASOURCE_USER_PASSWORD}
