--- a/application/backend/src/test/resources/application.properties
+++ b/application/backend/src/test/resources/application.properties
@@ -1,3 +1,6 @@
 #Port on with will be Spring boot application run
 server.port=8015
 spring.application.name=work-notes-localhost
+
+security.jwt.token.secret-key=test
+security.jwt.token.validity-in-millis=3600000
