--- a/application/impl/build.gradle
+++ b/application/impl/build.gradle
@@ -3,5 +3,7 @@ dependencies {
 
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.1.2.RELEASE'
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.2.RELEASE'
+	compile 'org.springframework.boot:spring-boot-starter-security:2.1.2.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.1.2.RELEASE'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
