--- a/ui/package.json
+++ b/ui/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-browser": "^7.2.9",
     "@angular/platform-browser-dynamic": "^7.2.9",
     "@angular/router": "^7.2.9",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.6.5",
-    "ng-pick-datetime": "^7.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
